--- a/.editorconfig
+++ b/.editorconfig
@@ -12,9 +12,11 @@ indent_style = space
 # Xml project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj,props,targets}]
 indent_size = 2
+charset = utf-8-bom
 
 [*.cs]
 indent_size = 4
+charset = utf-8-bom
 
 # Avoid "this." and "Me." if not necessary
 dotnet_style_qualification_for_field = false:suggestion
