--- a/src/NeoDemo/NeoDemo.csproj
+++ b/src/NeoDemo/NeoDemo.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Veldrid.NeoDemo</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
+    <LangVersion>12.0</LangVersion>
     <AssetsDir>$(MSBuildThisFileDirectory)Assets</AssetsDir>
   </PropertyGroup>
 
