--- a/src/Veldrid.Utilities/Veldrid.Utilities.csproj
+++ b/src/Veldrid.Utilities/Veldrid.Utilities.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <PackageVersion>$(AssemblyVersion)</PackageVersion>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFramework>net8.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>12.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
